# VapourSynth-nnedi3vk

./: .gitignore  README.md  meson.build  pyproject.toml
.github/workflows/: build.yml
src/: nnedi3vk.cpp
src/shaders/: common.glsl  predict.comp  predict_cv.comp  prescreen.comp
subprojects/: vulkan-headers.wrap  vulkan-memory-allocator.wrap  vulkan-volk.wrap
subprojects/packagefiles/vulkan-headers/: meson.build
subprojects/packagefiles/vulkan-memory-allocator/: meson.build
subprojects/packagefiles/vulkan-volk/: meson.build
